// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`any container nesting with distinct numbers of colons on each level parses correctly 1`] = `
"(
    <Directive>
      <p>{"one"}</p>
      <Directive2>
        <p>{"two"}</p>
        <Directive3>
          <p>{"three"}</p>
          <Directive4>
            <p>{"four"}</p>
          </Directive4>
          <p>{"five"}</p>
        </Directive3>
        <p>{"six"}</p>
      </Directive2>
      <p>{"seven"}</p>
    </Directive>
  )"
`;

exports[`onUnterminated: "error" throws an error on unterminated directives 1`] = `[Error: Unterminated directive: directive]`;

exports[`onUnterminated: "greedy" parses unterminated directives greedily 1`] = `
"(
    <>
      <Directive>
        <p>
          {"Should extend until the next 2-colon directive"}
        </p>
        <Directive2 />
      </Directive>
      {"\\n"}
      <Directive />
      {"\\n"}
      <blockquote>
        {"\\n"}
        <Directive>
          <p>
            {"Should extend to the end of blockquote"}
          </p>
        </Directive>
        {"\\n"}
      </blockquote>
      {"\\n"}
      <p>{"Some more text"}</p>
    </>
  )"
`;

exports[`parses directives in nested contexts 1`] = `
"(
    <>
      <blockquote>
        {"\\n"}
        <Directive>
          <p>{"directive inside blockquote"}</p>
        </Directive>
        {"\\n"}
      </blockquote>
      {"\\n"}
      <Directive>
        <Directive2>
          <p>{"directive inside another directive"}</p>
        </Directive2>
      </Directive>
    </>
  )"
`;

exports[`parses empty 2-colon directive 1`] = `"<Directive />"`;

exports[`parses nonempty 2-colon directive 1`] = `
"(
    <Directive>
      <h2>{"Title"}</h2>
      <p>{"Lorem ipsum sit amet, ..."}</p>
      <p>
        <img src="image.jpg" alt="" />
      </p>
      <NestedDirective>
        <p>{"something else"}</p>
      </NestedDirective>
    </Directive>
  )"
`;

exports[`parses unterminated directives as self-closing by default 1`] = `
"(
    <>
      <Directive />
      {"\\n"}
      <p>{"Should be at top-level"}</p>
      {"\\n"}
      <Directive2 />
      {"\\n"}
      <Directive />
      {"\\n"}
      <blockquote>
        {"\\n"}
        <Directive />
        {"\\n"}
        <p>{"Should be directly inside blockquote"}</p>
        {"\\n"}
      </blockquote>
      {"\\n"}
      <p>{"Some more text"}</p>
    </>
  )"
`;
